--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,66 +8,134 @@
     <!--CSS REQUIRED-->
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"  th:href="@{/assets/css/shards.min.css}"  >
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/shards.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main-style.css}">
 </head>
 <body>
-<div class="container my-4 ">
-    <div class="row justify-content-md-center px-4">
-        <div class="col-sm-12 col-md-6 col-lg-4 p-4 mb-4 card">
-            <h2 class="text-center mb-5">Login</h2>
-            <form th:action="@{/login}" method="post">
-                <div class="row">
-                    <div class="form-group col-md-12">
-                        <label for= "correo" class="col-form-label">Username</label>
-                        <div class="input-group input-group-seamless">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <i class="fa fa-user"></i>
-                                </div>
-                            </div>
-                            <input id="correo" class="form-control"  type="text" />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-12">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-12">
-                        <label for="password" class="col-form-label">Password</label>
-                        <div class="input-group input-group-seamless">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <i class="fa fa-key"></i>
-                                </div>
-                            </div>
-                            <input id="password" type="password" class="form-control"
-                                   />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-12">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 d-flex">
-                        <input class="btn btn-primary btn-pill d-flex mr-auto" type="submit" value="Login">
-                    </div>
-                </div>
+<div class="welcome d-flex justify-content-center flex-column">
+    <div class="welcome-container">
+        <div id="nav" class="row mr-2 ml-2">
+            <!-- Navigation -->
+            <nav class="navbar navbar-expand-lg navbar-dark pt-1 px-0">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse rr-flex" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Mi cuenta</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contáctanos</a>
+                        </li>
 
-            </form>
+                    </ul>
+
+                    <!-- Social Icons -->
+                    <ul class="header-social-icons navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://twitter.com/DesignRevision"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.facebook.com/designrevision"><i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://dribbble.com/hisk"><i class="fab fa-dribbble"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/designrevision"><i class="fab fa-github"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- / Navigation -->
+        </div> <!-- .container -->
+
+        <!-- Inner Wrapper -->
+
+        <div class="inner-wrapper">
+            <div id="behind">
+                <div class="overlay"></div>
+                <div id="carouselHouses" class="carousel slide" data-ride="carousel" data-keyboard="false"
+                     data-interval="10000">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselHouses" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselHouses" data-slide-to="1"></li>
+                    </ol>
+                    <div id="carousel-content" class="carousel-inner">
+                        <div class="carousel-item active">
+                                <img class="d-block w-100" th:src="@{/assets/img/house1.jpg}" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                                <img class="d-block w-100" th:src="@{/assets/img/house2.jpg}" alt="Second slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselHouses" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselHouses" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div id="top" class="container mb-4" >
+                <div class="row mb-auto">
+                    <div class="col-lg-4 col-md-4 col-sm-12 mr-auto ml-auto">
+                        <a class="brand m-2 p-2" href="#">
+                            <img th:src="@{/assets/img/brand.png}" class="mb-2" alt="Inmobiliaria"></a>
+                    </div>
+                </div>
+                <div class="row mt-3 mb-4">
+                    <div class="col-lg-12 col-md-12 col-sm-12 mt-auto">
+                        <div class="row">
+                            <form class="offset-lg-1 offset-md-1 col-lg-9 col-md-9 col-sm-12 row" action="/">
+                                <div class="col-lg-3 col-md-3 col-sm-12">
+                                    <select id="tipo" class="custom-select">
+                                        <option>Alquilar o Comprar</option>
+                                        <option>Comprar</option>
+                                        <option>Alquilar</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-12">
+                                    <select id="ubicacion" class="custom-select">
+                                        <option>Ubicacion</option>
+                                        <option>La Libertad</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-12">
+                                    <input class="form-control" type="text" placeholder="Precio">
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-12 justify-content-center align-content-center">
+                                    <button class="btn btn-orange" type="submit">Buscar...</button>
+                                </div>
+                            </form>
+                            <div class="col-lg-2 col-md-2 col-sm-12 justify-content-center align-content-center">
+                                <button class="btn btn-info"><i class="fas fa-plus"></i> Publicar propiedad</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- / Inner Wrapper -->
     </div>
 </div>
 
 
-
-    <script type="text/javascript" th:src="@{/assets/js/jquery-3.3.1.slim.min.js}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/popper.min.js}" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/bootstrap.min.js}" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/jquery-3.3.1.slim.min.js}"  crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{/assets/js/popper.min.js}"  crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{/assets/js/bootstrap.min.js}" crossorigin="anonymous"></script>
     <script type="text/javascript" th:src="@{/assets/js/shards.min.js}" ></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
+
 </body>
 </html>
