--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--CSS REQUIRED-->
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/shards.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main-style.css}">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
 <body>
 <div class="welcome d-flex justify-content-center flex-column">
@@ -17,7 +20,8 @@
         <div id="nav" class="row mr-2 ml-2">
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark pt-1 px-0">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse rr-flex" id="navbarNavDropdown">
@@ -43,13 +47,15 @@
                             <a class="nav-link" href="https://twitter.com/DesignRevision"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.facebook.com/designrevision"><i class="fab fa-facebook"></i></a>
+                            <a class="nav-link" href="https://www.facebook.com/designrevision"><i
+                                    class="fab fa-facebook"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://dribbble.com/hisk"><i class="fab fa-dribbble"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/designrevision"><i class="fab fa-github"></i></a>
+                            <a class="nav-link" href="https://github.com/designrevision"><i
+                                    class="fab fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -70,10 +76,44 @@
                     </ol>
                     <div id="carousel-content" class="carousel-inner">
                         <div class="carousel-item active">
-                                <img class="d-block w-100" th:src="@{/assets/img/house1.jpg}" alt="First slide">
+                            <img class="d-block w-100" th:src="@{/assets/img/house1.jpg}" alt="First slide">
+                            <div class="d-flex flex-column justify-content-between text-muted text-center description">
+                                <div>
+                                    <i class="far fa-clone"></i> 2
+                                    <h6>Cuartos</h6>
+                                </div>
+                                <div>
+                                    <i class="fas fa-bed"></i> 3
+                                    <h6>Dormitorios</h6>
+                                </div>
+                                <div>
+                                    <i class="fas fa-bath"></i> 2
+                                    <h6>Baños</h6>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center mt-2">
+                                <button class="btn btn-orange" type="submit">Detalles</button>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                                <img class="d-block w-100" th:src="@{/assets/img/house2.jpg}" alt="Second slide">
+                            <img class="d-block w-100" th:src="@{/assets/img/house2.jpg}" alt="Second slide">
+                            <div class="d-flex flex-column justify-content-between text-muted text-center description">
+                                <div>
+                                    <i class="far fa-clone"></i> 2
+                                    <h6>Cuartos</h6>
+                                </div>
+                                <div>
+                                    <i class="fas fa-bed"></i> 3
+                                    <h6>Dormitorios</h6>
+                                </div>
+                                <div>
+                                    <i class="fas fa-bath"></i> 2
+                                    <h6>Baños</h6>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center mt-2">
+                                <button class="btn btn-orange" type="submit">Detalles</button>
+                            </div>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselHouses" role="button" data-slide="prev">
@@ -86,7 +126,7 @@
                     </a>
                 </div>
             </div>
-            <div id="top" class="container mb-4" >
+            <div id="top" class="container mb-4">
                 <div class="row mb-auto">
                     <div class="col-lg-4 col-md-4 col-sm-12 mr-auto ml-auto">
                         <a class="brand m-2 p-2" href="#">
@@ -127,15 +167,248 @@
             </div>
         </div>
         <!-- / Inner Wrapper -->
+
     </div>
+    <!--  Inner Wrapper 2 -->
+    <div class="container pt-3 mt-4 mb-4">
+        <h1 class="align-text-center">Inmuebles destacados</h1>
+    </div>
+    <div class="intro-items mb-5">
+        <div class="card mr-2 ml-2">
+            <div class="salient-img">
+                <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
+                <div class="salient-action">
+                    <span>Renta</span>
+                </div>
+                <div class="salient-fav fav-format">
+                    <i class="fas fa-star text-warning"></i>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h5 class="card-title text-accent">Colonia Escalon</h5><i class="fas fa-heart text-danger fav-format"></i>
+                </div>
+                <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                <hr>
+                <p>
+                    <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                </p>
+                <div class="d-flex justify-content-between text-muted text-center">
+                    <div>
+                        <i class="far fa-clone"></i> 2
+                        <h6>Cuartos</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bed"></i> 3
+                        <h6>Dormitorios</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bath"></i> 2
+                        <h6>Baños</h6>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mt-2">
+                    <button class="btn btn-orange" type="submit">Detalles</button>
+                </div>
+            </div>
+        </div>
+        <div class="card mr-2 ml-2">
+            <div class="salient-img">
+                <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
+                <div class="salient-action">
+                    <span>Renta</span>
+                </div>
+                <div class="salient-fav fav-format">
+                    <i class="fas fa-star text-warning"></i>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h5 class="card-title text-accent">Colonia Escalon</h5><i class="fas fa-heart text-danger fav-format"></i>
+                </div>
+                <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                <hr>
+                <p>
+                    <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                </p>
+                <div class="d-flex justify-content-between text-muted text-center">
+                    <div>
+                        <i class="far fa-clone"></i> 2
+                        <h6>Cuartos</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bed"></i> 3
+                        <h6>Dormitorios</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bath"></i> 2
+                        <h6>Baños</h6>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mt-2">
+                    <button class="btn btn-orange" type="submit">Detalles</button>
+                </div>
+            </div>
+        </div>
+        <div class="card mr-2 ml-2">
+            <div class="salient-img">
+                <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
+                <div class="salient-action">
+                    <span>Renta</span>
+                </div>
+                <div class="salient-fav fav-format">
+                    <i class="fas fa-star text-warning"></i>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h5 class="card-title text-accent">Colonia Escalon</h5><i class="fas fa-heart text-danger fav-format"></i>
+                </div>
+                <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                <hr>
+                <p>
+                    <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                </p>
+                <div class="d-flex justify-content-between text-muted text-center">
+                    <div>
+                        <i class="far fa-clone"></i> 2
+                        <h6>Cuartos</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bed"></i> 3
+                        <h6>Dormitorios</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bath"></i> 2
+                        <h6>Baños</h6>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mt-2">
+                    <button class="btn btn-orange" type="submit">Detalles</button>
+                </div>
+            </div>
+        </div>
+        <div class="card mr-2 ml-2">
+            <div class="salient-img">
+                <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
+                <div class="salient-action">
+                    <span>Renta</span>
+                </div>
+                <div class="salient-fav fav-format">
+                    <i class="fas fa-star text-warning"></i>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h5 class="card-title text-accent">Colonia Escalon</h5><i class="fas fa-heart text-danger fav-format"></i>
+                </div>
+                <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                <hr>
+                <p>
+                    <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                </p>
+                <div class="d-flex justify-content-between text-muted text-center">
+                    <div>
+                        <i class="far fa-clone"></i> 2
+                        <h6>Cuartos</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bed"></i> 3
+                        <h6>Dormitorios</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bath"></i> 2
+                        <h6>Baños</h6>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mt-2">
+                    <button class="btn btn-orange" type="submit">Detalles</button>
+                </div>
+            </div>
+        </div>
+        <div class="card mr-2 ml-2">
+            <div class="salient-img">
+                <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
+                <div class="salient-action">
+                    <span>Renta</span>
+                </div>
+                <div class="salient-fav fav-format">
+                    <i class="fas fa-star text-warning"></i>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h5 class="card-title text-accent">Colonia Escalon</h5><i class="fas fa-heart text-danger fav-format"></i>
+                </div>
+                <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                <hr>
+                <p>
+                    <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                </p>
+                <div class="d-flex justify-content-between text-muted text-center">
+                    <div>
+                        <i class="far fa-clone"></i> 2
+                        <h6>Cuartos</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bed"></i> 3
+                        <h6>Dormitorios</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-bath"></i> 2
+                        <h6>Baños</h6>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mt-2">
+                    <button class="btn btn-orange" type="submit">Detalles</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- / Inner Wrapper -->
 </div>
 
 
-<script type="text/javascript" th:src="@{/assets/js/jquery-3.3.1.slim.min.js}"  crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/popper.min.js}"  crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/bootstrap.min.js}" crossorigin="anonymous"></script>
-    <script type="text/javascript" th:src="@{/assets/js/shards.min.js}" ></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
-
+<script type="text/javascript" th:src="@{/assets/js/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/popper.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/bootstrap.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/shards.min.js}"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
+<script type="text/javascript" th:src="@{/assets/js/slick.min.js}"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('.intro-items').slick({
+            centerMode: true,
+            centerPadding: '60px',
+            slidesToShow: 4,
+            arrows: false,
+            responsive: [
+                {
+                    breakpoint: 768,
+                    settings: {
+                        arrows: false,
+                        centerMode: true,
+                        centerPadding: '40px',
+                        slidesToShow: 3
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        arrows: false,
+                        centerMode: true,
+                        centerPadding: '40px',
+                        slidesToShow: 1
+                    }
+                }
+            ]
+    });
+    });
+</script>
 </body>
 </html>
