Fix some issues with connection and a new html

--- a/src/main/resources/static/assets/css/main-style.css
+++ b/src/main/resources/static/assets/css/main-style.css
@@ -126,3 +126,14 @@
     left: 0.3em;
     text-shadow: 3px 6px #272634;
 }
+
+.black-fill{
+    background: #3c434b;
+}
+.navbar-image{
+    text-align: right;
+}
+.navbar-image-link img{
+    width: 60%;
+    padding: 0.5em;
+}
