--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -136,7 +136,7 @@
                 <div class="row mt-3 mb-4">
                     <div class="col-lg-12 col-md-12 col-sm-12 mt-auto">
                         <div class="row">
-                            <form class="offset-lg-1 offset-md-1 col-lg-9 col-md-9 col-sm-12 row" action="/search">
+                            <form class="offset-lg-1 offset-md-1 col-lg-9 col-md-9 col-sm-12 row" th:action="@{/search}" method="post">
                                 <div class="col-lg-3 col-md-3 col-sm-12">
                                     <select id="tipo" class="custom-select">
                                         <option>Alquilar o Comprar</option>
