--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -6,23 +6,27 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--CSS REQUIRED-->
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/shards.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main-style.css}">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0"
+          th:href="@{/assets/css/shards-dashboards.1.1.0.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/extras.1.1.0.min.css}">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark pt-0 pl-2 pb-0 black-fill">
+<header id="menu-search" class="position-sticky">
+    <nav  class="navbar navbar-expand-lg pt-0 pl-2 pb-0 navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse rr-flex" id="standardNavBar">
-            <ul class="navbar-nav align-content-between">
+        <div class="collapse navbar-collapse rr-flex" id="navbarNavDropdown">
+            <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Inicio</a>
                 </li>
@@ -38,16 +42,310 @@
 
             </ul>
 
-            <div class="ml-auto pr-1 navbar-image">
-                <a class="brand navbar-image-link" href="#">
-                    <img th:src="@{/assets/img/brand.png}" alt="Inmobiliaria"></a>
-            </div>
-
+            <!-- Social Icons -->
+            <ul class="header-social-icons navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://twitter.com/DesignRevision"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.facebook.com/designrevision"><i
+                            class="fab fa-facebook"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://dribbble.com/hisk"><i class="fab fa-dribbble"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/designrevision"><i
+                            class="fab fa-github"></i></a>
+                </li>
+            </ul>
         </div>
     </nav>
+    <div class="mr-3 ml-3">
+
+        <div class="row pb-2">
+            <div class="col-md-9">
+
+                <div class="flex-row justify-content-between">
+                    <h5 class="title mt-1 d-inline">Filtros&nbsp;&nbsp;</h5>
+                    <button class="btn btn-outline-primary">Ubicación</button>
+                    <button class="btn btn-outline-primary">Tipo de propiedad</button>
+                    <button class="btn btn-primary">+1 amb</button>
+                    <button class="btn btn-outline-primary">Cocheras</button>
+                    <button class="btn btn-outline-primary">Precio</button>
+                    <button class="btn btn-outline-primary">Superficie</button>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="custom-control custom-toggle my-2">
+                    <input type="checkbox" id="map-toggle" name="map-toggle" class="custom-control-input">
+                    <label class="custom-control-label" for="map-toggle">Mostrar mapa</label>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
+<body>
+
+<div class="container mt-4">
+    <h3 class="title pt-2 pb-1 col-md-12 col-sm-12">Resultados de busqueda</h3>
+    <div class="row">
+        <div id="search-results" class="col-md-12 row">
+            <div class="col-md-4 mb-4 ml-auto mr-auto">
+                <div class="card">
+                    <div class="salient-img">
+                        <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
+                        <div class="salient-action">
+                            <span>Renta</span>
+                        </div>
+                        <div class="salient-fav fav-format">
+                            <i class="fas fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                class="fas fa-heart text-danger fav-format"></i>
+                        </div>
+                        <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                        <hr>
+                        <p>
+                            <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                        </p>
+                        <div class="d-flex justify-content-between text-muted text-center">
+                            <div>
+                                <i class="far fa-clone"></i> 2
+                                <h6>Cuartos</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bed"></i> 3
+                                <h6>Dormitorios</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bath"></i> 2
+                                <h6>Baños</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 ml-auto mr-auto">
+                <div class="card">
+                    <div class="salient-img">
+                        <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
+                        <div class="salient-action">
+                            <span>Renta</span>
+                        </div>
+                        <div class="salient-fav fav-format">
+                            <i class="fas fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                class="fas fa-heart text-danger fav-format"></i>
+                        </div>
+                        <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                        <hr>
+                        <p>
+                            <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                        </p>
+                        <div class="d-flex justify-content-between text-muted text-center">
+                            <div>
+                                <i class="far fa-clone"></i> 2
+                                <h6>Cuartos</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bed"></i> 3
+                                <h6>Dormitorios</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bath"></i> 2
+                                <h6>Baños</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 ml-auto mr-auto">
+                <div class="card">
+                    <div class="salient-img">
+                        <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
+                        <div class="salient-action">
+                            <span>Renta</span>
+                        </div>
+                        <div class="salient-fav fav-format">
+                            <i class="fas fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                class="fas fa-heart text-danger fav-format"></i>
+                        </div>
+                        <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                        <hr>
+                        <p>
+                            <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                        </p>
+                        <div class="d-flex justify-content-between text-muted text-center">
+                            <div>
+                                <i class="far fa-clone"></i> 2
+                                <h6>Cuartos</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bed"></i> 3
+                                <h6>Dormitorios</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bath"></i> 2
+                                <h6>Baños</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 ml-auto mr-auto">
+                <div class="card">
+                    <div class="salient-img">
+                        <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
+                        <div class="salient-action">
+                            <span>Renta</span>
+                        </div>
+                        <div class="salient-fav fav-format">
+                            <i class="fas fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                class="fas fa-heart text-danger fav-format"></i>
+                        </div>
+                        <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                        <hr>
+                        <p>
+                            <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                        </p>
+                        <div class="d-flex justify-content-between text-muted text-center">
+                            <div>
+                                <i class="far fa-clone"></i> 2
+                                <h6>Cuartos</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bed"></i> 3
+                                <h6>Dormitorios</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bath"></i> 2
+                                <h6>Baños</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 ml-auto mr-auto">
+                <div class="card">
+                    <div class="salient-img">
+                        <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
+                        <div class="salient-action">
+                            <span>Renta</span>
+                        </div>
+                        <div class="salient-fav fav-format">
+                            <i class="fas fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                class="fas fa-heart text-danger fav-format"></i>
+                        </div>
+                        <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                        <hr>
+                        <p>
+                            <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                        </p>
+                        <div class="d-flex justify-content-between text-muted text-center">
+                            <div>
+                                <i class="far fa-clone"></i> 2
+                                <h6>Cuartos</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bed"></i> 3
+                                <h6>Dormitorios</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bath"></i> 2
+                                <h6>Baños</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 ml-auto mr-auto">
+                <div class="card">
+                    <div class="salient-img">
+                        <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
+                        <div class="salient-action">
+                            <span>Renta</span>
+                        </div>
+                        <div class="salient-fav fav-format">
+                            <i class="fas fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                class="fas fa-heart text-danger fav-format"></i>
+                        </div>
+                        <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                        <hr>
+                        <p>
+                            <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
+                        </p>
+                        <div class="d-flex justify-content-between text-muted text-center">
+                            <div>
+                                <i class="far fa-clone"></i> 2
+                                <h6>Cuartos</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bed"></i> 3
+                                <h6>Dormitorios</h6>
+                            </div>
+                            <div>
+                                <i class="fas fa-bath"></i> 2
+                                <h6>Baños</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="map-holder" class="col-md-0">
+            <div id="map">
+        </div>
+        </div>
+    </div>
+</div>
 
 
+</body>
+<!-- <div id="price-range-slider">
+                                    <input type="hidden" class='custom-slider-input' name="custom-slider-value-1" >
+                                    <input type="hidden" class='custom-slider-input' name="custom-slider-value-2" >
+                                </div>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1"><i class="fas fa-dollar-sign"></i></span>
+                                    </div>
+                                    <input type="number" id="min-price" class="form-control" placeholder="Min" aria-label="min-price" aria-describedby="basic-addon1">
+                                    <input type="number" id="max-price" class="form-control" placeholder="Max" aria-label="max-price" aria-describedby="basic-addon2">
+                                </div>-->
 <script type="text/javascript" th:src="@{/assets/js/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/popper.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/bootstrap.min.js}" crossorigin="anonymous"></script>
@@ -55,5 +353,56 @@
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
 <script type="text/javascript" th:src="@{/assets/js/slick.min.js}"></script>
+<script>
+
+    function initMap() {
+        var myLatLng = {lat: -25.363, lng: 131.044};
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 4,
+            center: myLatLng
+        });
+
+        var marker = new google.maps.Marker({
+            position: myLatLng,
+            map: map,
+            title: 'Hello World!'
+        });
+    }
+
+    var fatherSearch = document.querySelector("#search-results");
+    var houseChild = document.querySelectorAll("#search-results > *");
+    var mapToggle = document.querySelector("#map-toggle");
+    var map = document.querySelector("#map-holder");
+
+    mapToggle.addEventListener('change', function(){
+        if(mapToggle.checked){
+            houseChild.forEach(function (e) {
+                e.classList.remove('col-md-4');
+                e.classList.add("col-md-6");
+            });
+            fatherSearch.classList.remove("col-md-12");
+            fatherSearch.classList.add("col-md-8");
+            map.classList.remove("col-md-0");
+            map.classList.add("col-md-4");
+        }
+        else{
+            houseChild.forEach(function (e) {
+                e.classList.remove('col-md-6');
+                e.classList.add("col-md-4");
+            });
+            fatherSearch.classList.remove("col-md-8");
+            fatherSearch.classList.add("col-md-12");
+            map.classList.remove("col-md-4");
+            map.classList.add("col-md-0");
+        }
+    });
+</script>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXeby84Czz7k7aBjHuUGw8BZEhhl-k_qI&callback=initMap">
+</script>
+<!--<script type="text/javascript" th:src="@{/assets/js/slider-search.js}"></script>-->
+<!-- JavaScript -->
+
 </body>
 </html>
