--- a/src/main/resources/static/assets/css/shards.css
+++ b/src/main/resources/static/assets/css/shards.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600|Roboto+Mono);
 
 :root {
-    --blue: #007bff;
+    --blue: var(--primary);
     --indigo: #674eec;
     --purple: #8445f7;
     --pink: #ff4169;
@@ -14,7 +14,9 @@
     --white: #fff;
     --gray: #868e96;
     --gray-dark: #343a40;
-    --primary: #007bff;
+    --primary: #e67e22;
+    --light-primary : #fc9438;
+    --dark-primary: #ee7204;
     --secondary: #5A6169;
     --success: #17c671;
     --info: #00b8d8;
@@ -45,12 +47,12 @@ body {
 }
 
 a {
-    color: #007bff;
+    color: var(--primary);
     text-decoration: none
 }
 
 a:hover {
-    color: #0056b3;
+    color: var(--dark-primary);
     text-decoration: underline
 }
 
@@ -230,15 +232,15 @@ pre {
 }
 
 .table-primary, .table-primary > td, .table-primary > th {
-    background-color: #b8daff
+    background-color: #ffd9b8
 }
 
 .table-hover .table-primary:hover {
-    background-color: #9fcdff
+    background-color: #ffdc9f
 }
 
 .table-hover .table-primary:hover > td, .table-hover .table-primary:hover > th {
-    background-color: #9fcdff
+    background-color: #ffd49f
 }
 
 .table-secondary, .table-secondary > td, .table-secondary > th {
@@ -388,12 +390,12 @@ pre {
 .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #007bff;
-    box-shadow: 0 .313rem .719rem rgba(0, 123, 255, .1), 0 .156rem .125rem rgba(0, 0, 0, .06)
+    border-color: var(--primary);
+    box-shadow: 0 .313rem .719rem rgba(238, 114, 4,.1), 0 .156rem .125rem rgba(0, 0, 0, .06)
 }
 
 .form-control:focus:hover {
-    border-color: #007bff
+    border-color: var(--primary)
 }
 
 .form-control::-webkit-input-placeholder {
@@ -721,33 +723,33 @@ form label:hover {
 
 .btn-primary {
     color: #fff;
-    border-color: #007bff;
-    background-color: #007bff;
+    border-color: var(--primary);
+    background-color: var(--primary);
     box-shadow: none
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #006fe6;
-    border-color: #006fe6;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .05), 0 4px 10px rgba(0, 123, 255, .25)
+    background-color: var(--dark-primary);
+    border-color: var(--dark-primary);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .05), 0 4px 10px rgba(238, 114, 4, .25);
 }
 
 .btn-primary.focus, .btn-primary:focus {
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, .15), 0 3px 15px rgba(0, 123, 255, .2), 0 2px 5px rgba(0, 0, 0, .1)
+    box-shadow: 0 0 0 3px rgba(238, 114, 4,.15), 0 3px 15px rgba(238, 114, 4,.2), 0 2px 5px rgba(0, 0, 0, .1)
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: var(--primary);
+    border-color: var(--primary);
     box-shadow: none;
     cursor: not-allowed
 }
 
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #006fe6;
-    border-color: #0062cc;
+    background-color: var(--dark-primary);
+    border-color: #f07b13;
     background-image: none;
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125) !important
 }
@@ -886,6 +888,7 @@ form label:hover {
 
 .btn-orange {
     color: #fff;
+    /*Main color */
     border-color: #e67e22;
     background-color: #e67e22;
     box-shadow: none
@@ -893,6 +896,7 @@ form label:hover {
 
 .btn-orange:hover {
     color: #fff;
+    /* Secondary */
     background-color: #e88731;
     border-color: #e88731;
     box-shadow: 0 5px 15px rgba(0, 0, 0, .05), 0 4px 10px rgba(231, 126, 35, 0.5)
@@ -1079,31 +1083,31 @@ form label:hover {
 .btn-outline-primary {
     background-color: transparent;
     background-image: none;
-    border-color: #007bff;
-    color: #007bff
+    border-color: var(--primary);
+    color: var(--primary)
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .05), 0 4px 10px rgba(0, 123, 255, .25)
+    background-color: var(--primary);
+    border-color: var(--primary);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .05), 0 4px 10px rgba(238, 114, 4, .25)
 }
 
 .btn-outline-primary.focus, .btn-outline-primary:focus {
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, .15), 0 3px 15px rgba(0, 123, 255, .2), 0 2px 5px rgba(0, 0, 0, .1) !important
+    box-shadow: 0 0 0 3px rgba(238, 114, 4,.15), 0 3px 15px rgba(238, 114, 4,.2), 0 2px 5px rgba(0, 0, 0, .1) !important
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #007bff;
+    color: var(--primary);
     background-color: transparent;
     box-shadow: none
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff
+    background-color: var(--primary);
+    border-color: var(--primary)
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
@@ -1428,11 +1432,11 @@ form label:hover {
 
 .btn-link {
     font-weight: 300;
-    color: #007bff
+    color: var(--primary)
 }
 
 .btn-link:hover {
-    color: #0056b3;
+    color: var(--dark-primary);
     text-decoration: underline
 }
 
@@ -1732,12 +1736,12 @@ i.material-icons {
 .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
     border-color: transparent;
-    background-color: #007bff;
+    background-color: var(--primary);
     box-shadow: none
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-    box-shadow: 0 .313rem .719rem rgba(0, 123, 255, .1), 0 .156rem .125rem rgba(0, 0, 0, .06)
+    box-shadow: 0 .313rem .719rem rgba(238, 114, 4,.1), 0 .156rem .125rem rgba(0, 0, 0, .06)
 }
 
 .custom-control-input:active ~ .custom-control-label::before {
@@ -1819,7 +1823,7 @@ i.material-icons {
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
     border: none;
-    background-color: #007bff;
+    background-color: var(--primary);
     box-shadow: none
 }
 
@@ -1871,7 +1875,7 @@ i.material-icons {
 }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-    background-color: #007bff
+    background-color: var(--primary)
 }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
@@ -1908,8 +1912,8 @@ i.material-icons {
 }
 
 .custom-select:focus {
-    border-color: #007bff;
-    box-shadow: 0 .313rem .719rem rgba(0, 123, 255, .1), 0 .156rem .125rem rgba(0, 0, 0, .06)
+    border-color: var(--primary);
+    box-shadow: 0 .313rem .719rem rgba(238, 114, 4,.1), 0 .156rem .125rem rgba(0, 0, 0, .06)
 }
 
 .custom-select:focus::-ms-value {
@@ -1957,19 +1961,19 @@ i.material-icons {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-    border-color: #007bff;
+    border-color: var(--primary);
     color: #495057;
-    box-shadow: 0 .313rem .719rem rgba(0, 123, 255, .1), 0 .156rem .125rem rgba(0, 0, 0, .06)
+    box-shadow: 0 .313rem .719rem rgba(238, 114, 4,.1), 0 .156rem .125rem rgba(0, 0, 0, .06)
 }
 
 .custom-file-input:focus ~ .custom-file-label::after {
-    border-color: #007bff;
-    color: #007bff;
+    border-color: var(--primary);
+    color: var(--primary);
     background: #e6f2ff
 }
 
 .custom-file-input:focus ~ .custom-file-label:hover {
-    border-color: #007bff
+    border-color: var(--primary)
 }
 
 .custom-file-input:lang(en) ~ .custom-file-label::after {
@@ -2042,8 +2046,8 @@ i.material-icons {
 }
 
 .custom-toggle .custom-control-input:checked ~ .custom-control-label::before {
-    background: #17c671;
-    border-color: #17c671
+    background: var(--primary) !important;
+    border-color: var(--primary) !important;
 }
 
 .custom-toggle .custom-control-input:checked ~ .custom-control-label::after {
@@ -2079,7 +2083,7 @@ i.material-icons {
 }
 
 .custom-toggle .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-    box-shadow: 0 .313rem .719rem rgba(0, 123, 255, .1), 0 .156rem .125rem rgba(0, 0, 0, .06)
+    box-shadow: 0 .313rem .719rem rgba(238, 114, 4,.1), 0 .156rem .125rem rgba(0, 0, 0, .06)
 }
 
 .custom-toggle.custom-toggle-sm {
@@ -2177,7 +2181,7 @@ i.material-icons {
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #007bff
+    background-color: var(--primary)
 }
 
 .nav-pills:hover {
@@ -2191,8 +2195,8 @@ i.material-icons {
 
 .nav-outlined-pills .nav-link.active, .show > .nav-outlined-pills .nav-link {
     background: 0 0;
-    color: #007bff;
-    border-color: #007bff
+    color: var(--primary);
+    border-color: var(--primary)
 }
 
 .nav-outlined-pills .nav-link:hover {
@@ -2200,8 +2204,8 @@ i.material-icons {
 }
 
 .nav-blue .nav-link.active {
-    background-color: #007bff;
-    border-color: #0074f0;
+    background-color: var(--primary);
+    border-color: #f08400;
     color: #fff
 }
 
@@ -2215,13 +2219,13 @@ i.material-icons {
 }
 
 .nav-blue .nav-link {
-    color: #007bff
+    color: var(--primary)
 }
 
 .nav-blue.nav-outlined-pills .nav-link.active {
     background: 0 0;
     border-color: #3395ff;
-    color: #007bff
+    color: var(--primary)
 }
 
 .nav-blue.nav-outlined-pills .nav-link.active:hover {
@@ -2229,7 +2233,7 @@ i.material-icons {
 }
 
 .nav-blue.nav-outlined-pills .nav-link {
-    color: #007bff
+    color: var(--primary)
 }
 
 .nav-indigo .nav-link.active {
@@ -2998,7 +3002,7 @@ i.material-icons {
 .page-link {
     padding: .5rem .75rem;
     line-height: 1.25;
-    color: #007bff;
+    color: var(--primary);
     background-color: #fff;
     border: none;
     margin: 0;
@@ -3006,7 +3010,7 @@ i.material-icons {
 }
 
 .page-link:focus, .page-link:hover {
-    color: #0056b3;
+    color: var(--dark-primary);
     background-color: #f5f5f6;
     border-color: #dfe1e3
 }
@@ -3033,8 +3037,8 @@ i.material-icons {
 
 .page-item.active .page-link {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff
+    background-color: var(--primary);
+    border-color: var(--primary)
 }
 
 .page-item.disabled .page-link {
@@ -3100,19 +3104,19 @@ a.badge {
 
 .badge-primary {
     color: #fff;
-    background-color: #007bff
+    background-color: var(--primary)
 }
 
 .badge-primary[href]:focus, .badge-primary[href]:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #0062cc
+    background-color: var(--dark-primary)
 }
 
 .badge-outline-primary {
     background: 0 0;
-    border: 1px solid #007bff;
-    color: #007bff
+    border: 1px solid var(--primary);
+    color: var(--primary)
 }
 
 .badge-secondary {
@@ -3272,7 +3276,7 @@ a.badge {
 
 .alert-primary {
     color: #f5faff;
-    background-color: #007bff
+    background-color: var(--primary)
 }
 
 .alert-primary .alert-link {
@@ -3389,7 +3393,7 @@ a.badge {
     height: .625rem;
     line-height: .625rem;
     color: #fff;
-    background-color: #007bff;
+    background-color: var(--primary);
     transition: width .6s ease
 }
 
@@ -3448,27 +3452,27 @@ a.badge {
 
 .list-group-item.active {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff
+    background-color: var(--primary);
+    border-color: var(--primary)
 }
 
 .list-group-item-primary {
-    color: #004085;
-    background-color: #b8daff
+    color: #854b00;
+    background-color: #ffe1b8
 }
 
 a.list-group-item-primary, button.list-group-item-primary {
-    color: #004085
+    color: #854b00
 }
 
 a.list-group-item-primary:focus, a.list-group-item-primary:hover, button.list-group-item-primary:focus, button.list-group-item-primary:hover {
-    color: #004085;
-    background-color: #9fcdff
+    color: #854b00;
+    background-color: #ffd99f
 }
 
 a.list-group-item-primary.active, button.list-group-item-primary.active {
-    background-color: #004085;
-    border-color: #004085
+    background-color: #854b00;
+    border-color: #854b00
 }
 
 .list-group-item-secondary {
@@ -4008,7 +4012,7 @@ a.list-group-item-dark.active, button.list-group-item-dark.active {
 
 .noUi-target:focus {
     outline: 0;
-    box-shadow: 0 0 8px rgba(0, 123, 255, .65), 0 3px 15px rgba(90, 97, 105, .1), 0 2px 3px rgba(90, 97, 105, .2)
+    box-shadow: 0 0 8px rgba(238, 114, 4,.65), 0 3px 15px rgba(90, 97, 105, .1), 0 2px 3px rgba(90, 97, 105, .2)
 }
 
 .noUi-base, .noUi-connects {
@@ -4040,7 +4044,7 @@ a.list-group-item-dark.active, button.list-group-item-dark.active {
 }
 
 .noUi-connect {
-    background: #007bff;
+    background: var(--primary);
     border-radius: 5px
 }
 
@@ -4144,7 +4148,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 
 .noUi-handle:focus {
     outline: 0;
-    box-shadow: 0 0 8px rgba(0, 123, 255, .65), 0 3px 15px rgba(90, 97, 105, .1), 0 2px 3px rgba(90, 97, 105, .2)
+    box-shadow: 0 0 8px rgba(238, 114, 4,.65), 0 3px 15px rgba(90, 97, 105, .1), 0 2px 3px rgba(90, 97, 105, .2)
 }
 
 .noUi-handle:after {
@@ -4293,7 +4297,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .slider-primary .noUi-connect {
-    background: #007bff
+    background: var(--primary)
 }
 
 .slider-secondary .noUi-connect {
@@ -4457,11 +4461,11 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .datepicker table tr td.highlighted.focused {
-    background: #007bff
+    background: var(--primary)
 }
 
 .datepicker table tr td.highlighted.disabled, .datepicker table tr td.highlighted.disabled:active {
-    background: #007bff;
+    background: var(--primary);
     color: #5a6169
 }
 
@@ -4479,7 +4483,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .datepicker table tr td.range {
-    background: #007bff;
+    background: var(--primary);
     color: #fff;
     border-radius: 0
 }
@@ -4489,7 +4493,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .datepicker table tr td.range.day.disabled:hover, .datepicker table tr td.range.disabled, .datepicker table tr td.range.disabled:active {
-    background: #0062cc;
+    background: var(--dark-primary);
     color: #3395ff
 }
 
@@ -4503,7 +4507,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .datepicker table tr td.range.today.disabled, .datepicker table tr td.range.today.disabled:active {
-    background: #007bff;
+    background: var(--primary);
     color: #fff
 }
 
@@ -4522,12 +4526,12 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .datepicker table tr td.day.range:hover, .datepicker table tr td.selected, .datepicker table tr td.selected.highlighted, .datepicker table tr td.selected.highlighted:hover, .datepicker table tr td.selected:hover {
-    background: #007bff;
+    background: var(--primary);
     color: #fff
 }
 
 .datepicker table tr td.active, .datepicker table tr td.active.highlighted, .datepicker table tr td.active.highlighted:hover, .datepicker table tr td.active:hover {
-    background: #007bff;
+    background: var(--primary);
     color: #fff
 }
 
@@ -4588,19 +4592,19 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .bg-primary {
-    background-color: #007bff !important
+    background-color: var(--primary) !important
 }
 
 .bg-primary.card .card-body, .bg-primary.card .card-footer, .bg-primary.card .card-header, .bg-primary.card .card-title {
-    background-color: #0062cc !important
+    background-color: var(--dark-primary) !important
 }
 
 .bg-primary.card .card-footer, .bg-primary.card .card-header {
-    background: #0074f0
+    background: #f08400
 }
 
 a.bg-primary:focus, a.bg-primary:hover {
-    background-color: #0062cc !important
+    background-color: var(--dark-primary) !important
 }
 
 .bg-secondary {
@@ -4736,7 +4740,7 @@ a.bg-dark:focus, a.bg-dark:hover {
 }
 
 .border-primary {
-    border-color: #007bff !important
+    border-color: var(--primary) !important
 }
 
 .border-secondary {
@@ -4804,11 +4808,11 @@ a.bg-dark:focus, a.bg-dark:hover {
 }
 
 .text-primary {
-    color: #007bff !important
+    color: var(--primary) !important
 }
 
 a.text-primary:focus, a.text-primary:hover {
-    color: #0062cc !important
+    color: var(--dark-primary) !important
 }
 
 .text-secondary {
