--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -372,42 +372,14 @@
 </div>
 
 
-<script type="text/javascript" th:src="@{/assets/js/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/assets/js/popper.min.js}" crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/assets/js/bootstrap.min.js}" crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/assets/js/shards.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/popper.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/bootstrap.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/shards.min.js}"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
-<script type="text/javascript" th:src="@{/assets/js/slick.min.js}"></script>
-<script type="text/javascript">
-    $(document).ready(function(){
-        $('.intro-items').slick({
-            centerMode: true,
-            centerPadding: '60px',
-            slidesToShow: 4,
-            arrows: false,
-            responsive: [
-                {
-                    breakpoint: 768,
-                    settings: {
-                        arrows: false,
-                        centerMode: true,
-                        centerPadding: '40px',
-                        slidesToShow: 3
-                    }
-                },
-                {
-                    breakpoint: 480,
-                    settings: {
-                        arrows: false,
-                        centerMode: true,
-                        centerPadding: '40px',
-                        slidesToShow: 1
-                    }
-                }
-            ]
-    });
-    });
-</script>
+<script type="text/javascript" th:src="@{/assets/js/general/slick.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/js/index/slick-config.js}"></script>
+
 </body>
 </html>
