--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -376,9 +376,8 @@
 <script type="text/javascript" th:src="@{/assets/js/general/popper.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/bootstrap.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/shards.min.js}"></script>
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
-<script type="text/javascript" th:src="@{/assets/js/general/slick.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/jquery.sharrre.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/js/search/map-config.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/index/slick-config.js}"></script>
 
 </body>
